--- a/app/src/main/res/layout/houseitem_view.xml
+++ b/app/src/main/res/layout/houseitem_view.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardElevation="10dp"
@@ -12,13 +13,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp">
+
         <ImageView
             android:id="@+id/imgitem"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/ic_launcher_foreground"
+            android:layout_margin="10dp"
             android:scaleType="centerCrop"
-            android:layout_margin="10dp"/>
+            android:src="@drawable/ic_launcher_foreground"
+            app:srcCompat="@drawable/casa3"
+            tools:srcCompat="@drawable/casa3" />
 
         <LinearLayout
             android:layout_width="match_parent"
