--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -17,21 +17,23 @@
         android:id="@+id/ImgitemDetail"
         android:layout_width="417dp"
         android:layout_height="202dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="78dp" />
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="57dp"
+        app:srcCompat="@drawable/casa1" />
 
     <TextView
         android:id="@+id/titledetail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/map"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginBottom="132dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="6dp"
+        android:layout_marginEnd="13dp"
+        android:layout_marginBottom="332dp"
         android:textSize="16sp"
         android:textStyle="bold" />
 
@@ -42,9 +44,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="11dp"
-        android:layout_marginEnd="3dp"
-        android:layout_marginBottom="338dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="7dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="307dp"
         android:textSize="14sp" />
 
     <ImageView
@@ -53,31 +56,29 @@
         android:layout_height="64dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="41dp"
-        android:layout_marginBottom="9dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="13dp"
         app:srcCompat="@drawable/ic_baseline_phone_android_24"
         app:tint="@color/colorPr" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/phoneView"
         android:layout_width="75dp"
         android:layout_height="63dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="39dp"
-        android:layout_marginBottom="8dp"
-        app:tint="@color/colorPr"
-        app:srcCompat="@drawable/ic_baseline_local_phone_24" />
+        android:layout_marginBottom="14dp"
+        app:srcCompat="@drawable/ic_baseline_local_phone_24"
+        app:tint="@color/colorPr" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/EmailView"
         android:layout_width="85dp"
         android:layout_height="64dp"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginEnd="162dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="9dp"
         android:foregroundTint="@color/colorPr"
         app:srcCompat="@drawable/ic_baseline_email_24"
         app:tint="@color/colorPr" />
@@ -88,7 +89,7 @@
         android:layout_height="155dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="98dp" />
+        android:layout_marginBottom="121dp" />
 
 
 </RelativeLayout>
