--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -52,7 +52,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/NewPostTitle"
+        android:id="@+id/nameuser"
         android:layout_width="324dp"
         android:layout_height="52dp"
         android:layout_marginTop="12dp"
@@ -111,6 +111,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.642"
         app:layout_constraintStart_toEndOf="@+id/UpPhoto"
-        app:layout_constraintTop_toBottomOf="@+id/NewPostTitle"
+        app:layout_constraintTop_toBottomOf="@+id/nameuser"
         app:srcCompat="@drawable/ic_baseline_camera_alt_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
