--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -63,6 +63,7 @@
                     android:id="@+id/SignOut"
                     android:layout_width="wrap_content"
                     android:layout_height="32dp"
+                    android:backgroundTint="@color/colorPr"
                     android:src="@drawable/ic_baseline_login_24" />
 
             </LinearLayout>
