--- a/app/src/main/res/layout/houseitem_view.xml
+++ b/app/src/main/res/layout/houseitem_view.xml
@@ -20,9 +20,7 @@
             android:layout_height="100dp"
             android:layout_margin="10dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_launcher_foreground"
-            app:srcCompat="@drawable/casa3"
-            tools:srcCompat="@drawable/casa3" />
+            android:src="@drawable/casa1" />
 
         <LinearLayout
             android:layout_width="match_parent"
