--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -99,7 +99,7 @@
         app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/casa1" />
+        app:srcCompat="@drawable/ic_baseline_image_24" />
 
     <ImageButton
         android:id="@+id/CatchPhoto"
