--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -23,6 +23,7 @@
 
             <ImageView
 
+                android:id="@+id/UserImg"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_margin="10dp"
@@ -53,11 +54,10 @@
                     android:textColor="@color/white"
                     android:textSize="12sp" />
 
-                <Button
-                    android:id="@+id/BottonLanzar"
-                    android:layout_width="164dp"
-                    android:layout_height="wrap_content"
-                    android:text="Iniciar Sesion" />
+                <com.google.android.gms.common.SignInButton
+                    android:id="@+id/googleSignIn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
                 <ImageButton
                     android:id="@+id/SignOut"
