--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -31,8 +31,8 @@
                 android:src="@drawable/ic_baseline_account_circle_24" />
 
             <LinearLayout
-                android:layout_width="253dp"
-                android:layout_height="114dp"
+                android:layout_width="255dp"
+                android:layout_height="132dp"
                 android:orientation="vertical">
 
                 <TextView
@@ -59,12 +59,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
-                <ImageButton
+                <Button
                     android:id="@+id/SignOut"
                     android:layout_width="wrap_content"
-                    android:layout_height="32dp"
-                    android:backgroundTint="@color/colorPr"
-                    android:src="@drawable/ic_baseline_login_24" />
+                    android:layout_height="wrap_content"
+                    android:text="@string/Sign_OUT" />
 
             </LinearLayout>
         </LinearLayout>
